<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colBackActMain"
    tools:context="ascii274.dutyfree.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginLeft="8dp"


        android:layout_marginRight="8dp"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/cabecera_192x150"
        tools:ignore="ContentDescription,MissingConstraints,RtlHardcoded"
        tools:layout_editor_absoluteY="0dp"/>


    <Button
        android:id="@+id/btnConvenio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtConvenio"
        android:textAlignment="center"
        android:textColor="#bf3d3d"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:textAllCaps="false"/>

    <Button
        android:id="@+id/btnVerArticulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtArticulo"
        android:textAlignment="center"
        android:textColor="#bf3d3d"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvenio"
        tools:textAllCaps="false"
        />


    <Button
        android:id="@+id/btnAnexo1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/txtAnexo1"
        android:textAlignment="center"
        android:textColor="#bf3d3d"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVerArticulo"
        tools:textAllCaps="false"/>


    <Button
        android:id="@+id/btnAnexo2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/txtAnexo2"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnexo1"/>


    <Button
        android:id="@+id/btnAnexo3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/txtAnexo3"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnexo2"/>

    <Button
        android:id="@+id/btnAnexo4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/txtAnexo4"
        android:textAlignment="center"
        android:textColor="#070707g"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnexo3"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnexo4"/>



    <!--

    <Button
        android:id="@+id/btnFavoritos"
        android:text="@string/txtFavoritos"
        android:textColor="#bf3d3d"
        android:textSize="12sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/btnConsaguinidad"/>

    <Button
        android:id="@+id/btnFaq"
        android:textColor="#bf3d3d"
        android:textSize="12sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtFaq"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/btnFavoritos"/>

        -->


</android.support.constraint.ConstraintLayout>
